src/main/kotlin/offer/technical/test/errors/AlreadyExistsException.kt
package offer.technical.test.errors

class AlreadyExistsException(message: String) : Exception(message)